Setup "Follow us !" links

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 <header id="header">
 	<ul id="header-zone">
 		<li class="first">Follow us !</li>
-		<li><a href="#"><img src="img/icon-github-off.png" class="off" alt="GITHUB"/><img src="img/icon-github.png" class="on" alt="GITHUB"/>
+		<li><a href="https://github.com/excilys/gatling"><img src="img/icon-github-off.png" class="off" alt="GITHUB"/><img src="img/icon-github.png" class="on" alt="GITHUB"/>
 
 			<p>Github</p></a></li>
-		<li><a href="#"><img src="img/icon-twitter-off.png" class="off" alt="TWITTER"/><img src="img/icon-twitter.png" class="on" alt="TWITTER"/>
+		<li><a href="https://twitter.com/GatlingTool"><img src="img/icon-twitter-off.png" class="off" alt="TWITTER"/><img src="img/icon-twitter.png" class="on" alt="TWITTER"/>
 
 			<p>Twitter</p></a></li>
-		<li><a href="#"><img src="img/icon-google-groups-off.png" class="off" alt="GOOGLE GROUPS"/><img src="img/icon-google-groups.png" class="on"
+		<li><a href="https://groups.google.com/forum/#!forum/gatling"><img src="img/icon-google-groups-off.png" class="off" alt="GOOGLE GROUPS"/><img src="img/icon-google-groups.png" class="on"
 																										alt="GOOGLE GROUPS"/>
 
 			<p>Google Groups</p></a></li>
