Remove currently unused tooltip

--- a/index.html
+++ b/index.html
@@ -187,12 +187,8 @@ class GatlingDebugSimulation extends Simulation {
 	<strong>THEY USE GATLING</strong>
 
 	<div class="row-fluid">
-		<div class="col-xs-2"><a href="#" rel="tooltip" data-original-title="Tooltip content" data-placement="bottom">
-			<img src="img/logo-ticketfly.png" alt="TICKET FLY"/></a>
-		</div>
-		<div class="col-xs-2"><a href="#"><img src="img/logo-gilt.png" alt="GILT"/></a>
-
-		</div>
+		<div class="col-xs-2"><a href="#"><img src="img/logo-ticketfly.png" alt="TICKET FLY"/></a></div>
+		<div class="col-xs-2"><a href="#"><img src="img/logo-gilt.png" alt="GILT"/></a></div>
 		<div class="col-xs-2"><a href="#"><img src="img/logo-abiquo.png" alt="ABIQUO"/></a></div>
 		<div class="col-xs-2"><a href="#"><img src="img/logo-silverpeas.png" alt="SILVERPEAS"/></a></div>
 		<div class="col-xs-2"><a href="#"><img src="img/logo-ezakus.png" alt="EZAKUS"/></a></div>
