Set placeholder for "Profesional Services", close #2

--- a/index.html
+++ b/index.html
@@ -254,21 +254,16 @@ class GatlingDebugSimulation extends Simulation {
 
 		<div class="col-xs-4">
 			<section id="paddle-text" class="paddle">
-				<header><h3>Professionnal Services</h3></header>
+				<header><h3>Professional Services</h3></header>
 				<section>
 					<table>
 						<tr>
 							<td><img src="img/professional-services.png" alt="Professionnal Services"/></td>
-							<td><p><b>Si meliora dies, ut vina, poemata reddit, scire velim, chartis pretium quotus arroget</b></p></td>
+							<td><p><b>Coming soon...</b></p></td>
 						</tr>
 					</table>
-					<ul>
-						<li>Si meliora dies, ut vina, poemata reddit, scire velim, chartis pretium</li>
-						<li>Si meliora dies, ut vina, poemata reddit, scire velim, chartis pretium</li>
-						<li>Si meliora dies, ut vina, poemata reddit, scire velim, chartis pretium</li>
-					</ul>
 				</section>
-				<footer><a href="#" class="btn-gatling">Texte à venir<i class="icon-arrow-gatling"></i></a></footer>
+				<footer></footer>
 			</section>
 		</div>
 	</div>
