Set placeholder for "Gatling news", close #1

--- a/index.html
+++ b/index.html
@@ -229,26 +229,11 @@ class GatlingDebugSimulation extends Simulation {
 					<table>
 						<tr>
 							<td><a href="#"><img src="img/img-news1.png" alt=""/></a></td>
-							<td><p>Si meliora dies, ut vina, poemata reddit, scire velim, chartis pretium quotus arroget annusvilis atque
-								novos?
-								Excludat iurgia finis scire velim.</p></td>
+							<td>Coming soon...</td>
 						</tr>
 					</table>
-					<footer><a href="#" class="btn-simple">READ MORE ></a></footer>
+					<footer></footer>
 				</section>
-
-				<section>
-					<table>
-						<tr>
-							<td><a href="#"><img src="img/img-news2.png" alt=""/></a></td>
-							<td><p>Si meliora dies, ut vina, poemata reddit, scire velim, chartis pretium quotus arroget annusvilis atque
-								novos?
-								Excludat iurgia finis scire velim.</p></td>
-						</tr>
-					</table>
-					<footer><a href="#" class="btn-simple">READ MORE ></a></footer>
-				</section>
-
 			</section>
 		</div>
 
