Change top links, close #3

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 				<li class="first"><a href="#"><img src="img/nav-home.png" alt="Home"/></a></li>
 				<li><a href="#">INTRODUCTION</a></li>
 				<li><a href="#">DOCUMENTATION</a></li>
-				<li><a href="#">COMMUNITY</a></li>
+				<li><a href="#">FAQ</a></li>
+                <li><a href="#">DOWNLOAD</a></li>
 			</ol>
 		</nav>
 
