--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 	<script src="js/bootstrap/bootstrap.min.js"></script>
 	<script src="js/prettify/prettify.js"></script>
 	<script src="js/common.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+
+
+        ga('create', 'UA-10826408-15', 'gatling.io');
+
+        ga('send', 'pageview');
+    </script>
 
 </head>
 <body>
