Create testimonies page

--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
 	</ul>
 	<section class="content">
 
-		<a href="/gatling/" class="logo"></a>
+		<a href="index.html" class="logo"></a>
 
 		<nav>
 			<ol>
-				<li class="first"><a href="#"><img src="img/nav-home.png" alt="Home"/></a></li>
+				<li class="first"><a href="index.html"><img src="img/nav-home.png" alt="Home"/></a></li>
 				<li><a href="#">INTRODUCTION</a></li>
 				<li><a href="#">DOCUMENTATION</a></li>
+				<li><a href="testimonies.html">TESTIMONIES</a></li>
 				<li><a href="#">FAQ</a></li>
                 <li><a href="#">DOWNLOAD</a></li>
 			</ol>
@@ -275,11 +276,8 @@ class GatlingDebugSimulation extends Simulation {
 
 <footer id="footer">
 	<section class="content">
-		<span class="floatl"><a href="/gatling/" class="logo"></a></span>
+		<span class="floatl"><a href="index.html" class="logo"></a></span>
 		<span class="floatl" style="margin:5px 0 0 5px">is an open-source load testing framework based on Scala, Akka and Netty</span>
-
-		<span class="floatr"><a href="#" target="_blank"><img src="img/excilys.png" alt="EXCILYS"/></a></span>
-		<span class="floatr" style="margin-top:3px;">&copy; eBusinessInformation 2013 - Legal</span>
 	</section>
 </footer>
 
