Use Analyze instead of Check the Results

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ val scn = scenario("Gatling")
           </div>
         </div>
         <div class="col-xs-6">
-          <h2><span>C</span>heck the Results</h2>
+          <h2><span>A</span>nalyze</h2>
 
           <div class="step-content chart">
             <a href="/assets/images/charts-response-time-full.png" data-lightbox="charts">
