--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="row-fluid">
         <div class="col-xs-6">
           <i class="glyphicon glyphicon-stats"></i>
-          <span>High performances</span>
+          <span>High performance</span>
         </div>
         <div class="col-xs-6">
           <i class="glyphicon glyphicon-globe"></i>
