--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <nav id="navbar-collapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">HOME</a></li>
+          <li class="active"><a href="/">HOME</a></li>
           <li><a href="/download">DOWNLOAD</a></li>
           <li><a href="/docs">DOCUMENTATION</a></li>
           <li><a href="/services">PROFESSIONAL SERVICES</a></li>
