--- a/download/index.html
+++ b/download/index.html
@@ -97,7 +97,7 @@
             <!-- @formatter:on -->
                             <pre> <code class="xml">
 &lt;dependency&gt;
-    &lt;groupId&gt;io.gatling&lt;/groupId&gt;
+    &lt;groupId&gt;io.gatling.highcharts&lt;/groupId&gt;
     &lt;artifactId&gt;gatling-charts-highcharts&lt;/artifactId&gt;
     &lt;version&gt;2.0.0-RC1&lt;/version&gt;
 &lt;/dependency&gt;
