Add bouygues' logo, fixed footer

--- a/index.html
+++ b/index.html
@@ -208,12 +208,21 @@ val scn = scenario("Gatling")
   <section class="row-fluid">
     <div class="content-wrapper">
       <!-- @formatter:off -->
+      <div class="col-xs-3"></div>
       <div class="col-xs-2"><a href="http://www.ticketfly.com"><img src="/assets/images/logo-ticketfly.png" alt="TICKET FLY"/></a></div>
       <div class="col-xs-2"><a href="http://www.gilt.com"><img src="/assets/images/logo-gilt.png" alt="GILT"/></a></div>
       <div class="col-xs-2"><a href="http://www.abiquo.com"><img src="/assets/images/logo-abiquo.png" alt="ABIQUO"/></a></div>
+      <!-- @formatter:on -->
+    </div>
+  </section>
+  <section class="row-fluid">
+    <div class="content-wrapper">
+      <!-- @formatter:off -->
+      <div class="col-xs-2"></div>
       <div class="col-xs-2"><a href="http://www.secutix.com"><img src="/assets/images/logo-secutix.png" alt="SECUTIX"/></a></div>
       <div class="col-xs-2"><a href="http://www.ezakus.com"><img src="/assets/images/logo-ezakus.png" alt="EZAKUS"/></a></div>
       <div class="col-xs-2"><a href="http://www.shutterfly.com"><img src="/assets/images/logo-shutterfly.png" alt="SHUTTERFLY"/></a></div>
+      <div class="col-xs-2"><a href="http://www.bouyguestelecom.fr"><img src="/assets/images/logo-bouygues.png" alt="BOUYGUES TELECOM"/></a></div>
       <!-- @formatter:on -->
     </div>
   </section>
