Add snapshots to download page

--- a/download/index.html
+++ b/download/index.html
@@ -111,10 +111,14 @@
                            <pre>
                                <code class="scala">
 libraryDependencies := "io.gatling.highcharts" % "gatling-charts-highcharts" % "2.0.0-RC2"
-                               </code>
-                           </pre>
-            <!-- @formatter:off -->
+                               </code> </pre>
+          <!-- @formatter:off -->
         </div>
+        <h1>Latest snapshot</h1>
+
+        <p class="lead"> Snapshots are available in <a href="https://oss.sonatype.org/content/repositories/snapshots/">Sonatype OSS Snapshots repository</a></p>
+        <p class="lead"><a href="https://oss.sonatype.org/content/repositories/snapshots/io/gatling/highcharts/gatling-charts-highcharts/2.0.0-SNAPSHOT/">Gatling bundle (.zip)</a></p>
+
         <h1>Previous version: Gatling 1.5.6</h1>
 
         <p class="lead"><a href="http://goo.gl/VhTI81">Gatling bundle (.tar.gz)</a></p>
