fix sbt setting example

--- a/download/index.html
+++ b/download/index.html
@@ -110,7 +110,7 @@
             <!-- @formatter:on -->
                            <pre>
                                <code class="scala">
-libraryDependencies := "io.gatling.highcharts" % "gatling-charts-highcharts" % "2.0.0-RC5"
+libraryDependencies += "io.gatling.highcharts" % "gatling-charts-highcharts" % "2.0.0-RC5"
                                </code> </pre>
           <!-- @formatter:off -->
         </div>
